--- a/projeto1.ipynb
+++ b/projeto1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8YzKQGRqpknOlPb7YaIuK",
+      "authorship_tag": "ABX9TyO9mpLBHTJEkOOeQblQ0Mh3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,39 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#EXEMPLO 01\n",
+        "#ENTRADAS DO PROGRAMA\n",
+        "a = input(\"Digite a:\")\n",
+        "b = input(\"Digite b:\")\n",
+        "#PROCESSAMENTO\n",
+        "soma = int(a)+int(b)\n",
+        "#SAÍDA NA TELA\n",
+        "print(soma)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Of4_JA8CI2Hv",
+        "outputId": "4f35610e-aba2-4d3f-84f0-02dbb1337148"
+      },
       "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a:3\n",
+            "Digite b:5\n",
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
