--- a/projeto1.ipynb
+++ b/projeto1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9mpLBHTJEkOOeQblQ0Mh3",
+      "authorship_tag": "ABX9TyMhb6PhCXYiGMZK2mcD+6fM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,38 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Renato415/Projeto1/blob/main/projeto1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#VARIÁVEIS\n",
+        "n3 = 20\n",
+        "n4 = n3 * 10\n",
+        "print(\"Resultado n3*n4 =\" + str(n4))\n",
+        "print (n4)\n",
+        "n3 = \"Mack\"\n",
+        "print (n3)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Je_sb2hCSBZZ",
+        "outputId": "0ecdda3a-5c84-4ee2-9059-5a06ed0c910d"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Resultado n3*n4 =200\n",
+            "200\n",
+            "Mack\n"
+          ]
+        }
       ]
     },
     {
