--- a/projeto1.ipynb
+++ b/projeto1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhb6PhCXYiGMZK2mcD+6fM",
+      "authorship_tag": "ABX9TyOwCAhoDfXKOwy/5hlEPf0Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,55 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Renato415/Projeto1/blob/main/projeto1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PASSO 06: Declaração de variáveis\n"
+      ],
+      "metadata": {
+        "id": "xROgt-jSWHot"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import TextIO\n",
+        "#VARIÁVEIS\n",
+        "X = 2\n",
+        "P = 3.1415\n",
+        "VERDADEIRO = True\n",
+        "texto = 'isto é uma string'\n",
+        "texto1 = \"ito também é uma string\"\n",
+        "c = 3 + 2\n",
+        "print(X)\n",
+        "print(P)\n",
+        "print(VERDADEIRO)\n",
+        "print(texto)\n",
+        "print(texto1)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H94X5BYmWahL",
+        "outputId": "7354ccbf-0b2e-4215-9e60-cebcc57fda69"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3.1415\n",
+            "True\n",
+            "isto é uma string\n",
+            "ito também é uma string\n"
+          ]
+        }
       ]
     },
     {
