--- a/projeto1.ipynb
+++ b/projeto1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwCAhoDfXKOwy/5hlEPf0Z",
+      "authorship_tag": "ABX9TyOnYSb8Uhc7rWTacMDy4FLP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,44 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Renato415/Projeto1/blob/main/projeto1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Passo 09 Principios básicos do Python"
+      ],
+      "metadata": {
+        "id": "vluoW8OfbIGf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1 = int (input(\"Digite o valor 1:\"))\n",
+        "n2 = int (input(\"Digite o valor 2:\"))\n",
+        "n3 = 20\n",
+        "n4 = n1 + n2 + n3\n",
+        "print (\"Soma: \" + str(n4))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MCNvsX9Ca9lj",
+        "outputId": "cb5502f5-5e83-4a81-b318-d58866a26b3e"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o valor 1:3\n",
+            "Digite o valor 2:2\n",
+            "Soma: 25\n"
+          ]
+        }
       ]
     },
     {
