--- a/projeto1.ipynb
+++ b/projeto1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnYSb8Uhc7rWTacMDy4FLP",
+      "authorship_tag": "ABX9TyP8tbVcq2LekyLmdhnphkBw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,47 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Renato415/Projeto1/blob/main/projeto1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# EX5)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "IdWURsIhemZ6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#EXERCÍCIOS EM AULA (ESFERA)\n",
+        "#Vou solicitar inicialmente o raio\n",
+        "print(\"Programa para calcular volume da esfera!\")\n",
+        "raio = float(input(\"Digite raio: \"))\n",
+        "v = (4/3) *3.1415* (raio**3)\n",
+        "print(\"Volume da esfera\" , v)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EoeStzM9fZ7v",
+        "outputId": "85499611-d30e-4ace-bda6-2be72952a750"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Programa para calcular volume da esfera!\n",
+            "Digite raio: 2\n",
+            "Volume da esfera 33.50933333333333\n"
+          ]
+        }
       ]
     },
     {
